# crush-ast

./: .gitattributes  .gitignore  CONTRIBUTING.md  CRUSH-AI-ANNOTATIONS.md  CRUSH-NOTEBOOK.md  Cargo.toml  LICENSE-MIT  README.md  SPIKE_RESULTS.md  SPIKE_RESULTS_2.md  STATE.md  TASKS.md  TASK_BRIEF.txt  add_manifest_to_export_py.py  harness.py  patch_assign.py  run_split.py  status.txt  test_parse.rs  tmp_test.rs
crates/bash_walker/: Cargo.toml  README.md
crates/bash_walker/src/: main.rs
crates/c_walker/: Cargo.toml  README.md
crates/c_walker/src/: lib.rs  main.rs
crates/casm/: Cargo.toml  README.md
crates/casm/specs/: casm_v1.0.md
crates/casm/src/: debug_info.rs  ecasm.rs  lib.rs
crates/casm/tests/: serde_tests.rs  source_map_tests.rs  ver02_version_gate.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/crush-aot/: Cargo.toml
crates/crush-aot/examples/: arithmetic.crush  arithmetic.js  arithmetic.py  sum1k.crush
crates/crush-aot/src/: codegen.rs  codegen_c.rs  compiler.rs  lib.rs  loader.rs
crates/crush-aot/tests/: differential_aot.rs  integration.rs  integration_c.rs
crates/crush-aot/tests/fixtures/: sum1k.crush
crates/crush-aotc/: Cargo.toml  README.md
crates/crush-aotc/src/: codegen.rs  infer.rs  kernel.rs  lib.rs  rt_header.rs
crates/crush-aotc/tests/: integration.rs
crates/crush-bucketspike/: Cargo.toml
crates/crush-bucketspike/src/: main.rs
crates/crush-cast/: .gitignore  Cargo.toml  README.md  SCHEMA.md  STATUS.md  build.rs  check-ts-drift.sh
crates/crush-cast/bindings/: AIExpression.ts  AIMetadata.ts  AIStatement.ts  AdaptationAction.ts  AdaptationStrategy.ts  AdaptationType.ts  BackoffStrategy.ts  CastType.ts  ChangelogEntry.ts  CollaborationPattern.ts  DecisionNode.ts  DelegationStrategy.ts  DiscoveryStrategy.ts  DomMutationType.ts  DomQueryType.ts  ErrorHandling.ts  ErrorLikelihood.ts  ExecutionContext.ts  ExecutionStrategy.ts  ExhaustiveMatchSite.ts  Expression.ts  ExternalResourceType.ts  Function.ts  FunctionAnnotations.ts  ImportStatement.ts  Invariant.ts  KnowledgeType.ts  LearningSource.ts  LearningStrategy.ts  LearningTarget.ts  MatchArm.ts  ModuleManifest.ts  ParameterSchema.ts  Pattern.ts  Priority.ts  Program.ts  RetentionPolicy.ts  SourceLoc.ts  Statement.ts  TemporaryNode.ts  (+6 more)
crates/crush-cast/python/: README.md  cast_types.py
crates/crush-cast/src/: ai.rs  cson.rs  diff.rs  format.rs  lib.rs  manifest.rs  pack.rs  types.rs  validate.rs
crates/crush-cast/tests/: diff_tests.rs  format_tests.rs  pack_tests.rs  python_roundtrip_tests.rs
crates/crush-cson/: Cargo.toml
crates/crush-cson/src/: lib.rs  parser.rs  test_issue.rs  vm_cap.rs
crates/crush-debugger/: Cargo.toml  README.md
crates/crush-debugger/src/: breakpoint.rs  lib.rs  main.rs  repl.rs  session.rs  vm_driver.rs  wire_consumer.rs
crates/crush-debugger/tests/: repl_integration_test.rs
crates/crush-debugger/tests/fixtures/: call_depth.crush  (+1 more)
crates/crush-diagnostics/: Cargo.toml
crates/crush-diagnostics/src/: lib.rs  wire_consumer.rs
crates/crush-diagnostics/tests/: wire_format.rs
crates/crush-errors/: Cargo.toml  README.md
crates/crush-errors/src/: context.rs  convert.rs  kinds.rs  lib.rs  version.rs
crates/crush-ffi/: Cargo.toml
crates/crush-ffi/examples/: example_c_plugin.c
crates/crush-ffi/include/: crush_plugin.h
crates/crush-ffi/src/: lib.rs
crates/crush-frontend/: Cargo.toml  README.md
crates/crush-frontend/src/: ai_runtime.rs  cast_enrich.rs  compiler.rs  cson_desugar.rs  diagnostics.rs  exhaustive_check.rs  import_system.rs  language_walkers.rs  lib.rs  mutation_check.rs  optimizer.rs  polyglot_imports.rs  render.rs  semantics.rs  types.rs  wip_check.rs
crates/crush-frontend/tests/: compiler_tests.rs  optimizer_tests.rs  polyglot_braces.rs  range_for.rs  render_tests.rs  type_check_tests.rs
crates/crush-index/: Cargo.toml
crates/crush-index/src/: index.rs  lib.rs  query.rs  stale.rs  tests.rs
crates/crush-installer/: Cargo.toml
crates/crush-installer/src/: main.rs
crates/crush-jit/: Cargo.toml
crates/crush-jit/src/: compiler.rs  lib.rs  runtime.rs  value.rs
crates/crush-lang-bash/: Cargo.toml
crates/crush-lang-bash/src/: analyzer.rs  lib.rs  lowerer.rs  parser.rs  sdk.rs
crates/crush-lang-bash/tests/: frontend_test.rs  pipeline_test.rs
crates/crush-lang-c/: Cargo.toml  README.md
crates/crush-lang-c/src/: lib.rs  main.rs  sdk.rs
crates/crush-lang-custom/: Cargo.toml
crates/crush-lang-custom/src/: lib.rs
crates/crush-lang-dart/: Cargo.toml
crates/crush-lang-dart/src/: lib.rs
crates/crush-lang-go/: Cargo.toml  capsule.toml
crates/crush-lang-go/src/: lib.rs  main.rs  sdk.rs
crates/crush-lang-js/: Cargo.toml
crates/crush-lang-js/src/: analyzer.rs  analyzer_boa.rs  lib.rs  lower_boa.rs  lower_swc.rs  sdk.rs
crates/crush-lang-js/tests/: boa_backend_test.rs  frontend_test.rs
crates/crush-lang-nepali/: Cargo.toml
crates/crush-lang-nepali/src/: lib.rs  sdk.rs
crates/crush-lang-python/: Cargo.toml
crates/crush-lang-python/src/: analyzer.rs  lib.rs  lower_expr.rs  lower_stmt.rs  parser.rs  sdk.rs
crates/crush-lang-python/tests/: frontend_test.rs  pipeline_test.rs
crates/crush-lang-rust/: Cargo.toml
crates/crush-lang-rust/src/: lib.rs  lower_expr.rs  lower_stmt.rs  parser.rs  sdk.rs
crates/crush-lang-rust/tests/: frontend_test.rs  pipeline_test.rs
crates/crush-lang-sdk/: Cargo.toml  README.md
crates/crush-lang-sdk/src/: akg.rs  builder.rs  bus.rs  caps.rs  cli.rs  codebase.rs  compile.rs  compute.rs  db.rs  differential.rs  graphics.rs  host_caps.rs  lib.rs  net.rs  repl.rs  repl_helper.rs  repl_util.rs  runtime.rs  stdlib.rs  task.rs  theme.rs  util.rs
crates/crush-lang-sdk/tests/: codebase_stale_e2e.rs  crush_compile_test.rs  crush_repl_test.rs  crush_run_test.rs  crush_test.rs  crushc_test.rs  dashboard_test.rs  integration.rs  polyglot_capability_test.rs  string_concat_test.rs
crates/crush-lang-sona/: Cargo.toml
crates/crush-lang-sona/src/: lib.rs
xtask/: Cargo.toml  audit-allowlist.txt
xtask/src/: diag.rs  lib.rs  lint_dejavue.rs  main.rs
(+422 files in other folders)
