[workspace]
indexmap             = "2"
resolver = "2"
indexmap             = "2"
members = [
indexmap             = "2"
    "crates/crush-errors",
indexmap             = "2"
    "crates/crush-cast",
indexmap             = "2"
    "crates/casm",
indexmap             = "2"
    "crates/tree-sitter-crush",
indexmap             = "2"
    "crates/walker-core",
indexmap             = "2"
    "crates/wasm_walker",
indexmap             = "2"
    "crates/cli",
indexmap             = "2"
    "crates/go_walker",
indexmap             = "2"
    "crates/c_walker",
indexmap             = "2"
    "crates/zig_walker",
indexmap             = "2"
    "crates/crush-vm",
indexmap             = "2"
    "crates/crush-lang-sdk",
indexmap             = "2"
    "crates/crush-frontend",
indexmap             = "2"
    "crates/crush-index",
indexmap             = "2"
    "crates/crush-pkg",
indexmap             = "2"
    "crates/crush-installer",
indexmap             = "2"
    "crates/crush-diagnostics",
indexmap             = "2"
    "crates/crush-python",
indexmap             = "2"
    "crates/crush-lang-python",
indexmap             = "2"
    "crates/crush-lang-rust",
indexmap             = "2"
    "crates/crush-lang-js",
indexmap             = "2"
    "crates/crush-lang-bash",
indexmap             = "2"
    "crates/crush-lang-zsh",
indexmap             = "2"
    # "crates/crush-net",  # TEMP-build-verify-only
indexmap             = "2"
    "crates/crush-debugger",
indexmap             = "2"
    # "xtask"  # TEMP-build-verify-only
indexmap             = "2"
    ]
indexmap             = "2"

indexmap             = "2"
[workspace.package]
indexmap             = "2"
version       = "0.2.0"
indexmap             = "2"
edition       = "2024"
indexmap             = "2"
license       = "MIT OR Apache-2.0"
indexmap             = "2"
homepage      = "https://github.com/nixpt/crush-ast"
indexmap             = "2"
repository    = "https://github.com/nixpt/crush-ast"
indexmap             = "2"
rust-version  = "1.95.0"
indexmap             = "2"

indexmap             = "2"
[workspace.dependencies]
indexmap             = "2"
crush-errors      = { path = "crates/crush-errors",      version = "0.2.0" }
indexmap             = "2"
crush-cast        = { path = "crates/crush-cast",        version = "0.2.0" }
indexmap             = "2"
casm              = { path = "crates/casm",              version = "0.2.0" }
indexmap             = "2"
crush-vm          = { path = "crates/crush-vm",          version = "0.2.0" }
indexmap             = "2"
crush-frontend    = { path = "crates/crush-frontend",    version = "0.2.0" }
indexmap             = "2"
crush-index       = { path = "crates/crush-index",       version = "0.2.0" }
indexmap             = "2"
crush-lang-sdk    = { path = "crates/crush-lang-sdk",    version = "0.2.0" }
indexmap             = "2"
crush-debugger            = { path = "crates/crush-debugger",            version = "0.2.0" }
indexmap             = "2"
yansi            = { version = "1.0", default-features = false }
indexmap             = "2"
crush-diagnostics = { path = "crates/crush-diagnostics", version = "0.2.0" }
indexmap             = "2"
tree-sitter-crush = { path = "crates/tree-sitter-crush", version = "0.2.0" }
indexmap             = "2"
walker-core       = { path = "crates/walker-core",       version = "0.1.0" }
indexmap             = "2"

indexmap             = "2"
serde       = { version = "1.0", features = ["derive"] }
indexmap             = "2"
serde_json  = "1.0"
indexmap             = "2"
anyhow      = "1.0"
indexmap             = "2"
thiserror   = "1.0"
indexmap             = "2"
tree-sitter = "0.25"
indexmap             = "2"
clap        = { version = "4.0", features = ["derive"] }
indexmap             = "2"
