[workspace]
resolver = "2"
members = [
    "crates/crush-errors",
    "crates/crush-cast",
    "crates/casm",
    "crates/tree-sitter-crush",
    "crates/walker-core",
    "crates/wasm_walker",
    "crates/cli",
    "crates/go_walker",
    "crates/crush-lang-c",
    "crates/zig_walker",
    "crates/crush-vm",
    "crates/crush-lang-sdk",
    "crates/crush-frontend",
    "crates/crush-index",
    "crates/crush-pkg",
    "crates/crush-installer",
    "crates/crush-diagnostics",
    "crates/crush-python",
    "crates/crush-lang-python",
    "crates/crush-lang-rust",
    "crates/crush-lang-js",
    "crates/crush-lang-bash",
    "crates/crush-lang-zsh",
    "crates/crush-net",
    "crates/crush-debugger",
    "crates/crush-jit",
    "xtask"
    , "crates/crush-ffi", "crates/crush-plugin-example", "crates/crush-lint", "crates/crush-cson", "crates/crush-lang-custom"]

[workspace.package]
version       = "0.2.0"
edition       = "2024"
license       = "MIT OR Apache-2.0"
homepage      = "https://github.com/nixpt/crush-ast"
repository    = "https://github.com/nixpt/crush-ast"
rust-version  = "1.95.0"

[workspace.dependencies]
crush-errors      = { path = "crates/crush-errors",      version = "0.2.0" }
crush-cast        = { path = "crates/crush-cast",        version = "0.2.0" }
casm              = { path = "crates/casm",              version = "0.2.0" }
crush-vm          = { path = "crates/crush-vm",          version = "0.2.0" }
crush-frontend    = { path = "crates/crush-frontend",    version = "0.2.0" }
crush-index       = { path = "crates/crush-index",       version = "0.2.0" }
crush-lang-sdk    = { path = "crates/crush-lang-sdk",    version = "0.2.0" }
crush-debugger            = { path = "crates/crush-debugger",            version = "0.2.0" }
crush-jit         = { path = "crates/crush-jit",         version = "0.2.0" }
yansi            = { version = "1.0", default-features = false }
crush-diagnostics = { path = "crates/crush-diagnostics", version = "0.2.0" }
tree-sitter-crush = { path = "crates/tree-sitter-crush", version = "0.2.0" }
walker-core       = { path = "crates/walker-core",       version = "0.1.0" }

serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
anyhow      = "1.0"
thiserror   = "1.0"
tree-sitter = "0.25"
clap        = { version = "4.0", features = ["derive"] }
chrono      = { version = "0.4", default-features = false, features = ["clock", "std"] }
indexmap    = "2.0"
