[package]
license.workspace = true
description = "Bash language walker — parses shell scripts into CAST IR"
name = "bash_walker"
version = "0.1.0"
edition = "2021"
repository.workspace = true

[dependencies]
casm.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
regex = "1.10"
shlex = "1.3"
