[package]
license.workspace = true
description = "C language walker — parses C source code into CAST IR"
name = "c_walker"
version = "0.1.0"
edition = "2021"
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
tree-sitter.workspace = true
tree-sitter-c = "0.23"
walker-core.workspace = true
crush-cast.workspace = true
