[package]
license.workspace = true
description = "Crush Assembly (CASM) — bytecode format for the Crush VM"
name = "casm"
version = "0.2.0"
edition = "2024"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["crush", "bytecode", "vm", "compiler"]
categories = ["compilers"]

[dependencies]
crush-errors.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde = "1.1"
hex = "0.4"
bitflags = "2.6"
sha2 = "0.10"
byteorder = "1.5"
