[package]
license.workspace = true
description = "Walker CLI — auto-detects source language and dispatches to the correct walker"
name = "walker"
version = "0.1.0"
edition = "2021"
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
walker-core.workspace = true
