[package]
license.workspace = true
description = "Walker CLI — auto-detects source language and dispatches to the correct walker"
name = "crush-walker"
version.workspace = true
edition = "2021"
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
crush-walker-core.workspace = true

[[bin]]
# PACKAGE is `crush-walker` because the name `walker` is TAKEN on crates.io by an
# unrelated project (passcod/walker, v1.0.1, ~87k downloads) — this crate could never
# be published as `walker`. The BINARY keeps the name `walker`: that is genuinely what
# it is (a source-language dispatcher), and package/binary names are independent.
name = "walker"
path = "src/main.rs"
