[package]
name = "crush-aot"
version.workspace = true
edition = "2024"
description = "Ahead-of-Time compiler for Crush — transpiles CASM to native .so via rustc"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["crush", "aot", "compiler", "native"]
categories = ["development-tools", "compilers"]
autobins = false

[dependencies]
casm.workspace = true
crush-frontend.workspace = true
crush-vm.workspace = true
crush-lang-sdk.workspace = true
crush-lang-python = { path = "../crush-lang-python", version = "0.3.0" }
crush-lang-js = { path = "../crush-lang-js", version = "0.3.0" }
crush-lang-rust = { path = "../crush-lang-rust", version = "0.3.0" }
crush-lang-c = { path = "../crush-lang-c", version = "0.3.0" }
crush-lang-go = { path = "../crush-lang-go", version = "0.3.0" }
crush-lang-zig = { path = "../crush-lang-zig", version = "0.3.0" }
crush-lang-wasm = { path = "../crush-lang-wasm", version = "0.3.0" }
crush-lang-bash = { path = "../crush-lang-bash", version = "0.3.0" }
crush-lang-zsh = { path = "../crush-lang-zsh", version = "0.3.0" }
crush-lang-nepali = { path = "../crush-lang-nepali", version = "0.3.0" }
crush-lang-custom = { path = "../crush-lang-custom", version = "0.3.0" }
crush-lang-dart = { path = "../crush-lang-dart", version = "0.3.0" }
crush-walker-core.workspace = true
crush-cast.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sha2 = "0.10"
libloading = "0.8"
tempfile = "3"
hex = "0.4"
clap.workspace = true
shlex = "1"
tree-sitter.workspace = true
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"

[[bin]]
name = "crush-aotc"
path = "src/bin/aotc.rs"

[[bin]]
name = "crush-walk-run"
path = "src/bin/walk_run.rs"

[[bin]]
name = "crush-aot-runner"
path = "src/bin/aot_runner.rs"
