[package]
name = "crush-cast"
version = "0.2.0"
edition = "2024"
description = "Crush Abstract Syntax Tree (CAST) - Stable Intermediate Representation"
license = "MIT OR Apache-2.0"

[features]
default = []
ts-export = ["dep:ts-rs"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cbor4ii = { version = "0.3", features = ["serde1", "use_std"] }
serde_path_to_error = "0.1"
uuid = { version = "1.0", features = ["v4"] }
crush-errors = { path = "../crush-errors" }
ts-rs = { version = "12.0", features = ["serde-json-impl"], optional = true }

[dev-dependencies]
serde_json = "1.0"

[[bin]]
name = "export-ts"
path = "src/bin/export-ts.rs"
required-features = ["ts-export"]

[[bin]]
name = "export-py"
path = "src/bin/export-py.rs"
