[package]
name = "crush-cast"
version = "0.2.0"
edition = "2024"
repository.workspace = true
description = "Crush Abstract Syntax Tree (CAST) - Stable Intermediate Representation"
license.workspace = true

[features]
default = []
ts-export = ["dep:ts-rs"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
cbor4ii = { version = "0.3", features = ["serde1", "use_std"] }
serde_path_to_error = "0.1"
uuid = { version = "1.0", features = ["v4"] }
crush-errors.workspace = true
ts-rs = { version = "12.0", features = ["serde-json-impl"], optional = true }

# wasm32 has no OS RNG; uuid v4 needs a randomness source via the `js` backend.
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.0", features = ["v4", "js"] }

[dev-dependencies]
serde_json = "1.0"

[[bin]]
name = "export-ts"
path = "src/bin/export-ts.rs"
required-features = ["ts-export"]

[[bin]]
name = "export-py"
path = "src/bin/export-py.rs"
