[package]
name = "crush-cson"
readme = "../../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
crush-vm = { path = "../crush-vm", version = "0.3.0" }
serde.workspace = true
serde_json.workspace = true
