[package]
name = "crush-diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Canonical NDJSON diagnostic helper trio for the Crush CLI surface — shared shape (code, level, file, line, col, message, hint) extracted from the inlined xtask/crush-vm/crush-installer/crush-pkg copies."

[dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
