[package]
name = "crush-errors"
version = "0.2.0"
edition = "2024"
repository.workspace = true
description = "Unified error types for the CRUSH runtime"
license.workspace = true

[dependencies]
thiserror.workspace = true
regex = "1.0"
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
