[package]
name = "crush-errors"
version.workspace = true
edition = "2024"
repository.workspace = true
homepage.workspace = true
description = "Unified error types for the CRUSH runtime"
license.workspace = true
readme = "README.md"
keywords = ["crush", "error", "error-handling", "diagnostics"]
categories = ["rust-patterns"]

[dependencies]
thiserror.workspace = true
regex = "1.0"
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
