[package]
name = "crush-frontend"
version = "0.2.0"
edition = "2024"
description = "Portable Crush language frontend: parser, semantic analyzer, optimizer, and CASM compiler"
license = "MIT OR Apache-2.0"

[dependencies]
crush-cast.workspace = true
casm.workspace = true
crush-errors.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "cast_compile"
path = "../../benches/cast_compile.rs"
harness = false
