[package]
name = "crush-frontend"
version = "0.2.0"
edition = "2024"
repository.workspace = true
homepage.workspace = true
description = "Portable Crush language frontend: parser, semantic analyzer, optimizer, and CASM compiler"
license.workspace = true
readme = "README.md"
keywords = ["crush", "compiler", "parser", "frontend"]
categories = ["compilers"]

[dependencies]
crush-cast.workspace = true
casm.workspace = true
crush-errors.workspace = true
crush-index.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "cast_compile"
path = "../../benches/cast_compile.rs"
harness = false
