[package]
name = "crush-installer"
version = "0.2.0"
edition = "2024"
description = "Installer and uninstaller for the Crush language toolchain"
license.workspace = true
repository = "https://github.com/nixpt/crush-ast"

[[bin]]
name = "crush-installer"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs = "5.0"
serde.workspace = true
serde_json.workspace = true
tempfile = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"
