[package]
name = "crush-installer"
version.workspace = true
edition = "2024"
description = "Installer and uninstaller for the Crush language toolchain"
license.workspace = true
repository = "https://github.com/nixpt/crush-ast"

[[bin]]
name = "crush-installer"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs = "5.0"
serde.workspace = true
serde_json.workspace = true
tempfile = { version = "3", optional = true }
# Canonical NDJSON wire-format helpers (DiagRecord + diag_line +
# diag_line_from + wants_json). Replaces the previously inlined
# `DiagRecord` struct + 5 lockdown tests in `src/main.rs::tests`;
# canonical wire-format lockdown lives in
# `crates/crush-diagnostics/tests/wire_format.rs`. The local
# `emit_diag` binary helper now wraps `crush_diagnostics::diag_line_from` +
# `print!` (installer's NDJSON stream goes to stdout, parallel to pkg).
crush-diagnostics.workspace = true

[dev-dependencies]
tempfile = "3"
