[package]
name = "crush-lang-bash"
version.workspace = true
edition = "2024"
description = "Bash/POSIX shell language support for Crush — native AST parser backed by brush-parser"
readme = "../../README.md"
license.workspace = true
repository.workspace = true

[[bin]]
name = "bash_walker"
path = "src/bin/walker.rs"

[dependencies]
crush-cast.workspace = true
crush-walker-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
brush-parser = "0.4"

[dev-dependencies]
crush-frontend = { path = "../crush-frontend" }
crush-lang-sdk = { path = "../crush-lang-sdk" }
crush-vm = { path = "../crush-vm" }
