[package]
name = "crush-lang-js"
version.workspace = true
edition = "2024"
description = "JavaScript/TypeScript language support for Crush — dual-backend JS/TS frontend (swc primary + boa optional)"
readme = "../../README.md"
license.workspace = true
repository.workspace = true

[[bin]]
name = "js_walker"
path = "src/bin/walker.rs"

[features]
default = ["swc-backend"]
swc-backend = []
boa-backend = ["boa_ast", "boa_parser", "boa_interner"]

[dependencies]
crush-cast.workspace = true
crush-walker-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
swc_ecma_parser = "41"
swc_ecma_ast = "25"
swc_common = "23"
swc_atoms = "9"
boa_parser = { version = "0.21", optional = true }
boa_ast = { version = "0.21", optional = true }
boa_interner = { version = "0.21", optional = true }

[dev-dependencies]
crush-frontend = { path = "../crush-frontend", version = "0.3.0" }
crush-lang-sdk = { path = "../crush-lang-sdk", version = "0.3.0" }
crush-vm = { path = "../crush-vm", version = "0.3.0" }
crush-lang-python = { path = "../crush-lang-python", version = "0.3.0" }
