[package]
name = "crush-lang-nepali"
version = "0.2.0"
edition = "2024"
description = "Nepali language support for Crush"
license.workspace = true
repository.workspace = true

[dependencies]
crush-cast = { workspace = true }
walker-core = { workspace = true }
crush-frontend = { path = "../crush-frontend" }
anyhow = { workspace = true }

[dev-dependencies]
crush-frontend.workspace = true
crush-lang-sdk.workspace = true
crush-vm.workspace = true
